
  [ Osamu Aoki ]
  * uscan:
    + Fix the new package version regex for filenamemangle.  Closes: #869150

  [ Cyril Brulebois ]
  * debsign: Fix bash completion by using file extensions instead of
    using globs.  Closes: #877440

  [ Mattia Rizzolo ]
  * debchange:
    + Update the manpage to mention that --bpo now targets stretch-backports,
      not jessie-backports.  Closes: #877877

 -- Mattia Rizzolo <mattia@debian.org>  Sat, 30 Sep 2017 22:19:56 +0200

devscripts (2.17.6+deb9u1) stretch; urgency=medium

  [ Mattia Rizzolo ]
  * debchange:
    + Target stretch-backports with --bpo.  Closes: #867662
    + Support $codename{,-{proposed-updates,security}} as well. Closes: #789587
  * bts:
    + Add patch from Samuel Thibault <sthibault@debian.org> to add support for
      the new 'a11y' tag.  Closes: #867416

 -- James McCoy <jamessan@debian.org>  Thu, 13 Jul 2017 21:20:04 -0400

devscripts (2.17.6) unstable; urgency=medium

  [ Osamu Aoki ]
  * uscan:
    + Update manpage on the github.com behavior and the alternative
      shorthand form.  (Closes: #836507, #859089)

  [ Adam D. Barratt ]
  * uscan: fix a typo in the manpage
  * debdiff: fix a typo

  [ Paul Wise ]
  * chdist:
    + add support for running aptitude
  * debcheckout:
    + handle cgit URLs too. Thanks to Rhonda for the suggestion.
  * Make various scripts work when HOME is unset:
    bts chdist debcommit dscverify grep-excuses
    namecheck rc-alert svnpath wnpp-alert

  [ Antonio Terceiro ]
  * debrepro:
    + check for dependencies before doing any builds (Closes: #862586)

  [ James Clarke ]
  * debsign:
    + Fix signing a dsc directly.  (Closes: #863497)

  [ Jean-Pierre Giraud ]
  * French translation update (Closes: #863983)

 -- James McCoy <jamessan@debian.org>  Sat, 03 Jun 2017 14:29:24 -0400

devscripts (2.17.5) unstable; urgency=medium

  * Create GNUPGHOME in /tmp to fix CI failures due to long path names.

 -- James McCoy <jamessan@debian.org>  Sat, 18 Mar 2017 21:18:46 -0400
